testsuite/negative/abstract.n
abstract class A {
   public abstract foo1 () : void;
   
   public abstract bar : int { get; }
   
   public abstract wee : int { set; }
}


class B : A {
   public override foo1 () : void { 
       base.foo1 ();                 // E: cannot call an abstract base method A.foo1
   }
   
   public override bar : int { 
       get {  base.bar }  // E: cannot call an abstract base method A.get_bar
   }
   public override wee : int { 
       set {  base.wee = value } // E: cannot call an abstract base method A.set_wee
   }
}

